Rewrite library to Java to remove Kotlin dep
Modify bintray release to use locally defined credentials

Remove package name from markdown

Create pretty example app

Fix Java library issues and make Example app awesome

Bump new version

Remove package name from readme

Configure gradle and drop Logger

Move bintray variables to env variables

Create dynamic readme version fetch and sort out gradle stuff

Create better bintray gradle

Remove lock screen method

--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Goldfinger</string>
+    <string name="encrypt">Encrypt</string>
+    <string name="decrypt">Decrypt</string>
+    <string name="authenticate">Authenticate</string>
+    <string name="hint">Super secret input</string>
+    <string name="status">Status:</string>
+    <string name="fingerprint_not_available">Fingerprint is not available. Device must have Fingerprint sensor, enabled Lock screen and at least 1 enrolled Fingerprint.</string>
+    <string name="authenticate_user">Authenticate Fingerprint</string>
 </resources>
