--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -3,8 +3,10 @@
     <string name="encrypt">Encrypt</string>
     <string name="decrypt">Decrypt</string>
     <string name="authenticate">Authenticate</string>
+    <string name="cancel">Cancel</string>
     <string name="hint">Super secret input</string>
-    <string name="status">Status:</string>
+    <string name="status">Status:\nType [%s]\nReason [%s]\nValue [%s]\nMessage [%s]</string>
     <string name="fingerprint_not_available">Fingerprint is not available. Device must have Fingerprint sensor, enabled Lock screen and at least 1 enrolled Fingerprint.</string>
     <string name="authenticate_user">Authenticate Fingerprint</string>
+    <string name="error">Error</string>
 </resources>
