--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -7,6 +7,6 @@
     <string name="hint">Super secret input</string>
     <string name="status">Status:\nType [%s]\nReason [%s]\nValue [%s]\nMessage [%s]</string>
     <string name="fingerprint_not_available">Fingerprint is not available. Device must have Fingerprint sensor, enabled Lock screen and at least 1 enrolled Fingerprint.</string>
-    <string name="authenticate_user">Authenticate Fingerprint</string>
+    <string name="authenticate_user">Authenticate Biometric</string>
     <string name="error">Error</string>
 </resources>
